# Prometheus

./: .env.example  .gitignore  .mcp.example.json  .mcp.graphify.template.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.example.json
.claude/agents/: prometheus-dashboard-alerts-engineer.md  prometheus-data-validation-engineer.md  prometheus-execution-simulation-engineer.md  prometheus-orchestrator.md  prometheus-risk-state-engineer.md  prometheus-safety-guardian.md  prometheus-spec-architect.md  prometheus-strategy-backtest-engineer.md  prometheus-test-verification-engineer.md
.claude/rules/: prometheus-core.md  prometheus-mcp-and-secrets.md  prometheus-phase-workflow.md  prometheus-safety.md
configs/: README.md  dev.example.yaml
docs/: README.md
scripts/: _phase2g_wave1_analysis.py  _phase2l_R3_analysis.py  _phase2m_R1a_analysis.py  _phase2s_R1b_analysis.py  _phase2w_R2_analysis.py  _phase3d_F1_analysis.py  _phase3j_D1A_analysis.py  phase2e_backfill.py  phase2e_baseline_backtest.py  phase2g_variant_wave1.py  phase2l_R3_first_execution.py  phase2m_R1a_on_R3_execution.py  phase2s_R1b_narrow_execution.py  phase2w_R2_execution.py  phase3_smoke_run.py  phase3d_F1_execution.py  phase3j_D1A_execution.py  phase3q_5m_acquisition.py  phase3s_5m_diagnostics.py  phase4ac_alt_symbol_acquisition.py  phase4ae_alt_symbol_substrate_feasibility.py  phase4af_alt_symbol_regime_persistence.py  phase4ai_single_position_cross_sectional_trend.py  phase4i_v2_acquisition.py  phase4l_v2_backtest.py  phase4r_g1_backtest.py  phase4x_c1_backtest.py
(+554 files in other folders)
