[project]
name = "prometheus"
version = "0.0.0"
description = "Safety-first, operator-supervised trading system for Binance USDⓈ-M futures (v1 foundation)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Prometheus operator" }]
dependencies = [
    "pyarrow>=17",
    "duckdb>=1.1",
    "pydantic>=2.8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prometheus"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "research/data",
    "configs",
    "docs",
    "infra",
    "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
# defaults: double quotes, 4-space indent, trailing commas as ruff decides.

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/prometheus"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*", "duckdb", "duckdb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["src", "."]
